| Summary: | ASTERISK-17711: [patch] SIP 200 OK rejected because the field 'received' in Via header contains link local IPv6 with its scope ! | ||
| Reporter: | Djalel Chefrour (ch_djalel) | Labels: | |
| Date Opened: | 2011-04-19 05:36:18 | Date Closed: | 2011-06-22 14:19:02 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Channels/chan_sip/IPv6 |
| Versions: | 1.8.3 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) asterisk-1.8.3.2_ipv6_ll_scope_bug.png ( 1) asterisk-1.8.3.2-ipv6_ll_scope.patch | |
| Description: | Hi, I am using Astersik on a "Linux 2.6.9-42.ELsmp" with IPv6 link local addresses. 3rd party SIP stack rejects Asterisk SIP 200 OK (following a Register) as it judges the next Via header invalid. Via: SIP/2.0/UDP [fe80::224:17ff:fe47:4076]:5060;branch=z9hG4bK-ec1a-39a459b-104d5b02;received=fe80::224:17ff:fe47:4076%eth1 The received field contains an IPv6 link local address with its scope (%eth1) and therefore doesn't comply to IPv6address BNF as defined in section 25.1 of RFC 3261. Screenshot of packet capture and patch attached. Patch might be modified to enforce the check on all addresses. BR, Djalel Chefrour ****** STEPS TO REPRODUCE ****** Use IPv6 link local addresses. | ||
| Comments: | By: Leif Madsen (lmadsen) 2011-04-19 07:27:15 Moved to Needs License until license is approved. This is a manual process so this will not get switched once the license is approved. Please find a bug marshal on #asterisk-bugs to get this switched to the appropriate level. By: Leif Madsen (lmadsen) 2011-04-27 06:31:23 Thanks for signing the license! Your issue is now Ready For Testing By: Terry Wilson (twilson) 2011-06-22 14:19:02.230-0500 Fixed in 1.8 r324484 and trunk r324487. Thanks! | ||